# scalp-radar

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMMANDS.md  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  README.md  check_mc.py  check_mc2.py  check_param.py  check_pws.py  check_sl.py  check_ts.py  check_wfo.py  check_windows.py  deploy.sh  dev.bat  docker-compose.yml  nginx.conf  pyproject.toml
backend/: __main__.py  main.py
backtests/: scalp_radar_portfolio_recap.xlsx
config/: assets.yaml  exchanges.yaml  param_grids.yaml  risk.yaml  strategies.yaml  strategies.yaml.bak.20260215_120020  strategies.yaml.bak.21assets
docs/: ARCHITECTURE.md  BACKTEST_WFO.md  CHANGELOG.md  ROADMAP.md  STRATEGIES.md  TROUBLESHOOTING.md  WORKFLOW_WFO.md  regime_binary_report.md  regime_detector_report.md  regime_impact_report.md  sync-wfo-results.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: __main__.py  analyze_correlation.py  analyze_wfo_deep.py  analyze_wfo_regression.py  audit_combo_score.py  audit_fees.py  audit_grid_states.py  audit_wfo.py  backfill_candles.py  backup_db.sh  benchmark_fast_engine.py  check_combos.py  check_history.py  check_jobs_params.py  check_live_sizing.py  cleanup_retired_assets.sql  compare_equity_fix.py  compare_params.py  compare_wfo.py  diagnose_dd_leverage.py  diagnose_margin.py  diagnostic_calmar.py  export_btc_4h.py  fetch_funding.py  fetch_history.py  fetch_oi.py  fix_fake_grade_a.py  fix_invalid_explorer_runs.py  grid_boltrend_diagnostic.py  migrate_optimization.py  (+19 more)
(+457 files in other folders)
